--- a/frr.conf
+++ b/frr.conf
@@ -1,6 +1,7 @@
 frr defaults traditional
 log file /var/log/frr/frr.log
 log syslog informational
+log stdout debugging
 ipv6 forwarding
 service integrated-vtysh-config
 !
