Add docker-start to FRR container Dockerfile

--- a/Dockerfile.openshift
+++ b/Dockerfile.openshift
@@ -36,3 +36,6 @@ RUN chown frr:frr /etc/frr/daemons /etc/frr/frr.conf
 
 WORKDIR /root
 ENTRYPOINT ["/root/frr.sh", "frr-node"]
+
+COPY docker-start /usr/lib/frr/docker-start
+CMD ["/usr/lib/frr/docker-start"]
