--- a/Dockerfile.openshift
+++ b/Dockerfile.openshift
@@ -35,7 +35,7 @@ ADD vtysh.conf /etc/frr
 RUN chown frr:frr /etc/frr/daemons /etc/frr/frr.conf 
 
 WORKDIR /root
-ENTRYPOINT ["/root/frr.sh", "frr-node"]
+ENTRYPOINT ["/sbin/tini", "--"]
 
 COPY docker-start /usr/lib/frr/docker-start
 CMD ["/usr/lib/frr/docker-start"]
