--- a/config/frr-k8s/kustomization.yaml
+++ b/config/frr-k8s/kustomization.yaml
@@ -5,5 +5,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: quay.io/metallb/frrk8s
+  newName: quay.io/metallb/frr-k8s
   newTag: 0.1.0
