--- a/config/all-in-one/frr-k8s.yaml
+++ b/config/all-in-one/frr-k8s.yaml
@@ -245,6 +245,7 @@ spec:
                                     items:
                                       properties:
                                         localPref:
+                                          format: int32
                                           type: integer
                                         prefixes:
                                           description: Prefixes is the list of prefixes
