--- a/config/crd/bases/frrk8s.metallb.io_frrconfigurations.yaml
+++ b/config/crd/bases/frrk8s.metallb.io_frrconfigurations.yaml
@@ -230,6 +230,7 @@ spec:
                                     items:
                                       properties:
                                         localPref:
+                                          format: int32
                                           type: integer
                                         prefixes:
                                           description: Prefixes is the list of prefixes
