Manifests: regenerate with BGPSessionState
We wire up the new status exporter as a sidecar container,
add it to the built image and regenerate the manifests to include
both it and the new API.

Signed-off-by: Ori Braunshtein <obraunsh@redhat.com>

--- a/charts/frr-k8s/values.yaml
+++ b/charts/frr-k8s/values.yaml
@@ -168,6 +168,9 @@ frrk8s:
     resources: {}
   frrMetrics:
     resources: {}
+  frrStatus:
+    pollInterval: "2m"
+    resources: {}
 crds:
   enabled: true
   validationFailurePolicy: Fail
