--- a/config/all-in-one/frr-k8s-prometheus.yaml
+++ b/config/all-in-one/frr-k8s-prometheus.yaml
@@ -19,6 +19,67 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.14.0
+  name: bgpsessionstates.frrk8s.metallb.io
+spec:
+  group: frrk8s.metallb.io
+  names:
+    kind: BGPSessionState
+    listKind: BGPSessionStateList
+    plural: bgpsessionstates
+    singular: bgpsessionstate
+  scope: Namespaced
+  versions:
+  - name: v1beta1
+    schema:
+      openAPIV3Schema:
+        description: BGPSessionState exposes the status of a BGP Session from the
+          FRR instance running on the node.
+        properties:
+          apiVersion:
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
+            type: string
+          kind:
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: BGPSessionStateSpec defines the desired state of BGPSessionState.
+            type: object
+          status:
+            description: BGPSessionStateStatus defines the observed state of BGPSessionState.
+            properties:
+              bfdStatus:
+                type: string
+              bgpStatus:
+                type: string
+              node:
+                type: string
+              peer:
+                type: string
+              vrf:
+                type: string
+            type: object
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.14.0
   name: frrconfigurations.frrk8s.metallb.io
 spec:
   group: frrk8s.metallb.io
@@ -588,6 +649,14 @@ rules:
   - list
   - watch
   - update
+- apiGroups:
+  - ""
+  resources:
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -634,6 +703,26 @@ rules:
   resources:
   - validatingwebhookconfigurations
   verbs:
+  - update
+- apiGroups:
+  - frrk8s.metallb.io
+  resources:
+  - bgpsessionstates
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - frrk8s.metallb.io
+  resources:
+  - bgpsessionstates/status
+  verbs:
+  - get
+  - patch
   - update
 - apiGroups:
   - frrk8s.metallb.io
@@ -1230,6 +1319,34 @@ spec:
           name: frr-conf
         - mountPath: /etc/frr_metrics
           name: metrics
+      - args:
+        - --node-name=$(NODE_NAME)
+        - --namespace=$(NAMESPACE)
+        - --pod-name=$(POD_NAME)
+        command:
+        - /etc/frr_status/frr-status
+        env:
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+        - name: NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        image: quay.io/frrouting/frr:9.1.0
+        name: frr-status
+        volumeMounts:
+        - mountPath: /var/run/frr
+          name: frr-sockets
+        - mountPath: /etc/frr
+          name: frr-conf
+        - mountPath: /etc/frr_status
+          name: frr-status
       - command:
         - /etc/frr_reloader/frr-reloader.sh
         image: quay.io/frrouting/frr:9.1.0
@@ -1275,6 +1392,15 @@ spec:
         volumeMounts:
         - mountPath: /etc/frr_metrics
           name: metrics
+      - command:
+        - /bin/sh
+        - -c
+        - cp -f /frr-status /etc/frr_status/
+        image: quay.io/metallb/frr-k8s:main
+        name: cp-frr-status
+        volumeMounts:
+        - mountPath: /etc/frr_status
+          name: frr-status
       serviceAccountName: frr-k8s-daemon
       shareProcessNamespace: true
       terminationGracePeriodSeconds: 10
@@ -1297,6 +1423,8 @@ spec:
         name: reloader
       - emptyDir: {}
         name: metrics
+      - emptyDir: {}
+        name: frr-status
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
