--- a/config/frr-k8s/frr-k8s.yaml
+++ b/config/frr-k8s/frr-k8s.yaml
@@ -151,6 +151,33 @@ spec:
             mountPath: /etc/frr
           - name: metrics
             mountPath: /etc/frr_metrics
+      - name: frr-status
+        image: quay.io/frrouting/frr:9.1.0
+        command: ["/etc/frr_status/frr-status"]
+        args:
+          - "--node-name=$(NODE_NAME)"
+          - "--namespace=$(NAMESPACE)"
+          - "--pod-name=$(POD_NAME)"
+        volumeMounts:
+          - name: frr-sockets
+            mountPath: /var/run/frr
+          - name: frr-conf
+            mountPath: /etc/frr
+          - name: frr-status
+            mountPath: /etc/frr_status
+        env:
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+        - name: NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
       - name: reloader
         image: quay.io/frrouting/frr:9.1.0
         command: ["/etc/frr_reloader/frr-reloader.sh"]
@@ -180,6 +207,8 @@ spec:
           emptyDir: {}
         - name: metrics
           emptyDir: {}
+        - name: frr-status
+          emptyDir: {}
       initContainers:
         # Copies the initial config files with the right permissions to the shared volume.
         - name: cp-frr-files
@@ -206,6 +235,12 @@ spec:
           volumeMounts:
             - name: metrics
               mountPath: /etc/frr_metrics
+        - name: cp-frr-status
+          image: controller:latest
+          command: ["/bin/sh", "-c", "cp -f /frr-status /etc/frr_status/"]
+          volumeMounts:
+            - name: frr-status
+              mountPath: /etc/frr_status
       serviceAccountName: daemon
       terminationGracePeriodSeconds: 10
       shareProcessNamespace: true
