--- a/config/rbac/secrets_role.yaml
+++ b/config/rbac/secrets_role.yaml
@@ -14,3 +14,11 @@ rules:
       - list
       - watch
       - update
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+    verbs:
+      - get
+      - list
+      - watch
